--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 </div>
 <div class=entry-content>
 <div class=entry-header>
-<div class=entry-title>Center of Excellence for Cybersecurity, NFSU
+<div class=entry-title>Freelance Security Researcher, Online
 </div>
 <div class=entry-role>Security Researcher Intern</div>
 <div class=entry-date>Feb 2024 - Present | India</div>
